create cliente: metods login, cadastro: fix ToolController
